fixed a bug with sorting race results

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ APP_DEBUG=true
 APP_URL=http://localhost:5000
 
 # adminlte or bootstrap
-RACE_VIEW=adminlte
-
+RACE_VIEW=bootstrap
 LOG_CHANNEL=stack
+
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
