added pagination and sorting bootstrap

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel_task8
 APP_ENV=local
 APP_KEY=base64:GwC/x+gQjkjThG7/1LZtnCHZyRPQHyDraUWeGKAGaVA=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost:5000
 
 # adminlte or bootstrap
